--- a/scss/editor/callouts/_callout-fas-infobox.scss
+++ b/scss/editor/callouts/_callout-fas-infobox.scss
@@ -143,15 +143,6 @@ body {
 }
 
 /* h1 ribbon */
-:is(.fas-h1-stroke, .h1-stroke) .callout[data-callout="fas-infobox"] {
-    h1 {
-        display: block;
-    }
-    h1::before, h1::after {
-        background: none;
-        height: unset;
-    }
-}
 .callout[data-callout="fas-infobox"] {
     --overflow-width: 10px;
     --h1-line-height: 1.6;
@@ -216,6 +207,15 @@ body {
         + .callout-content {
             border: none;
         }
+    }
+}
+:is(body.fas-h1-stroke, .h1-stroke) .callout[data-callout="fas-infobox"] {
+    h1 {
+        display: block;
+    }
+    h1::before, h1::after {
+        background: none;
+        height: unset;
     }
 }
 
