--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -1,3 +1,6 @@
+
+@import 'foundations/colors/colors_definitions';
+
 /* @settings
 
 name: Fancy-a-Story
@@ -98,8 +101,8 @@ settings:
         type: variable-themed-color
         format: hex
         opacity: false
-        default-light: '#ffffff'
-        default-dark: '#1e1e1e'
+        default-light: '#{$default-primary-light}'
+        default-dark: '#{$default-text-dark}'
     - 
         id: custom-color-base-100
         title: Custom - Text
@@ -107,8 +110,8 @@ settings:
         type: variable-themed-color
         format: hex
         opacity: false
-        default-light: '#222222'
-        default-dark: '#dadada'
+        default-light: '#{$default-text-light}'
+        default-dark: '#{$default-primary-dark}'
     -
         id: custom-color-space
         title: Custom - Gradient color space
