--- a/scss/editor/_image.scss
+++ b/scss/editor/_image.scss
@@ -28,7 +28,7 @@ body {
     .image-embed[alt~="#{$key}"] { --image-shadow-color: rgba(var(--color-#{$key}-rgb), 0.2); }
 }
 
-.markdown-rendered .image-embed[alt~="no-shadow"] {
+.image-embed[alt~="no-shadow"] {
     --image-shadow-offset: 0;
 }
 
