--- a/css/editor/callouts/callouts-metadata.css
+++ b/css/editor/callouts/callouts-metadata.css
@@ -68,13 +68,12 @@
 }
 
 .callout[data-callout-metadata~=blank] {
-  --callout-padding: 0;
-  --callout-content-padding: 0;
   margin: 0;
 }
 .callout[data-callout-metadata~=blank], .callout[data-callout-metadata~=blank] > .callout-content {
   border: none;
   background: none;
+  padding: 0;
 }
 .callout[data-callout-metadata~=blank] > .callout-title {
   display: none;
