--- a/postcss/cssclasses/note-accent.css
+++ b/postcss/cssclasses/note-accent.css
@@ -112,3 +112,17 @@ body.theme-dark {
   --embed-border-start: 2px solid var(--interactive-accent);
   --background-modifier-active-hover: hsla(var(--interactive-accent-hsl), 0.15);
 }
+
+/* Specific to the theme */
+.markdown-source-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6), .markdown-preview-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) {
+  --banner-slope-border-color: var(--color-accent);
+}
+
+.headings-accent:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) {
+  --h1-color: var(--color-accent);
+  --h2-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 10%);
+  --h3-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 20%);
+  --h4-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 40%);
+  --h5-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 60%);
+  --h6-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 80%);
+}
