--- a/postcss/plugins/core/file-explorer-hover.css
+++ b/postcss/plugins/core/file-explorer-hover.css
@@ -10,7 +10,7 @@
   body:not(.is-grabbing) .tree-item-self.is-clickable:hover {
     background: none;
   }
-  body:not(.is-grabbing) .tree-item-self.is-clickable:hover::before {
+  body:not(.is-grabbing) .tree-item-self.is-clickable:not(.is-being-renamed):hover::before {
     content: "";
     position: absolute;
     top: 0;
@@ -20,7 +20,7 @@
     background-color: var(--nav-item-background-hover);
     z-index: -1;
   }
-  body:not(.is-grabbing) .tree-item-self.is-clickable:not(.is-active):hover::before {
+  body:not(.is-grabbing) .tree-item-self.is-clickable:not(.is-active):not(.is-being-renamed):hover::before {
     animation: bg-slide 0.5s ease-in-out;
   }
 }
