--- a/css/plugins/core/file-explorer-rainbow.css
+++ b/css/plugins/core/file-explorer-rainbow.css
@@ -45,10 +45,10 @@
 }
 
 body {
-  --fas-rainbow-folders: true;
+  --fas-rainbow-folders: enable;
 }
 
-@container style(--fas-rainbow-folders: true) {
+@container style(--fas-rainbow-folders: enable) {
   .nav-folder-children > .nav-folder:nth-child(10n+2),
   .nav-files-container > div > .nav-folder:nth-child(10n+2),
   [data-type=bookmarks] .tree-item:nth-child(10n+2) {
