Fix callouts film strip and masonry with Minimal theme

--- a/css/editor/callouts/callout-film-strip.css
+++ b/css/editor/callouts/callout-film-strip.css
@@ -70,3 +70,9 @@
 .callout[data-callout=film-strip] .callout-content > p > span:last-of-type::after {
   content: "← " counter(frames);
 }
+
+/* Fix for Minimal theme and img-grid cssclass */
+.callout[data-callout=film-strip] .callout-content > p:has(> .image-embed) {
+  display: flex;
+  gap: 0;
+}
