--- a/css/editor/callouts/callout-masonry.css
+++ b/css/editor/callouts/callout-masonry.css
@@ -78,3 +78,13 @@
 .callout[data-callout=masonry][data-callout-metadata=horizontal] br {
   display: none;
 }
+
+/* Fix for Minimal theme and img-grid cssclass */
+.callout[data-callout=masonry]:not([data-callout-metadata=horizontal]) > .callout-content > p:has(> .image-embed) {
+  display: block;
+  column-gap: 0.5rem;
+}
+
+.callout[data-callout=masonry] .image-embed {
+  display: initial;
+}
