--- a/css/editor/callouts/callout-grid.css
+++ b/css/editor/callouts/callout-grid.css
@@ -1,3 +1,7 @@
+/* GPLv3 license
+Callout Grid
+Author: ElsaTam (Kapirklaa in Discord)
+*/
 /* Compatibility with ITS theme/snippets */
 .markdown-source-view > div, .markdown-preview-view {
   container: markdown-view/inline-size;
