--- a/css/editor/callouts/callout-profile.css
+++ b/css/editor/callouts/callout-profile.css
@@ -1,3 +1,7 @@
+/* GPLv3 license
+Callout Profile
+Author: ElsaTam (Kapirklaa in Discord)
+*/
 body {
   --font-typewriter: "TT2020StyleE", "Courier", monospace;
 }
