--- a/scss/css/editor/callouts/callout-comic.scss
+++ b/scss/css/editor/callouts/callout-comic.scss
@@ -1,2 +1,7 @@
+/* GPLv3 license
+Callout Comic
+Author: ElsaTam (Kapirklaa in Discord)
+*/
+
 @use '../../../editor/callouts/callout-comic';
 @use '../../../shared/fonts/vtc-letterer-pro';
