--- a/scss/css/editor/callouts/callout-fas-infobox.scss
+++ b/scss/css/editor/callouts/callout-fas-infobox.scss
@@ -1,1 +1,6 @@
+/* GPLv3 license
+Callout Fas Infobox
+Author: ElsaTam (Kapirklaa in Discord)
+*/
+
 @use '../../../editor/callouts/callout-fas-infobox';
