--- a/scss/css/editor/callouts/callout-film-strip.scss
+++ b/scss/css/editor/callouts/callout-film-strip.scss
@@ -1,3 +1,8 @@
+/* GPLv3 license
+Callout Film strip
+Author: ElsaTam (Kapirklaa in Discord)
+*/
+
 @use '../../../editor/callouts/callout-film-strip';
 
 /* Fix for Minimal theme and img-grid cssclass */
