--- a/scss/css/editor/callouts/callout-letter.scss
+++ b/scss/css/editor/callouts/callout-letter.scss
@@ -1,3 +1,8 @@
+/* GPLv3 license
+Callout Letter
+Author: ElsaTam (Kapirklaa in Discord)
+*/
+
 @use '../../../editor/callouts/callout-letter';
 @use '../../../shared/fonts/tangerine';
 @use '../../../shared/fonts/homemade_apple';
