--- a/scss/css/editor/callouts/callout-masonry.scss
+++ b/scss/css/editor/callouts/callout-masonry.scss
@@ -1,3 +1,8 @@
+/* GPLv3 license
+Callout Masonry
+Author: ElsaTam (Kapirklaa in Discord)
+*/
+
 @use '../../../editor/callouts/callout-masonry';
 
 /* Fix for Minimal theme and img-grid cssclass */
