--- a/scss/css/editor/callouts/callout-paper-fold.scss
+++ b/scss/css/editor/callouts/callout-paper-fold.scss
@@ -1,2 +1,7 @@
+/* GPLv3 license
+Callout Paper fold
+Author: ElsaTam (Kapirklaa in Discord)
+*/
+
 @use '../../../editor/callouts/callout-paper-fold';
 @use '../../../shared/fonts/walter_turncoat';
