--- a/scss/css/editor/callouts/callout-pinned.scss
+++ b/scss/css/editor/callouts/callout-pinned.scss
@@ -1,2 +1,7 @@
+/* GPLv3 license
+Callout Pinned
+Author: ElsaTam (Kapirklaa in Discord)
+*/
+
 @use '../../../editor/callouts/callout-pinned';
 @use '../../../shared/fonts/tt2020';
