--- a/scss/css/editor/callouts/callout-polaroid.scss
+++ b/scss/css/editor/callouts/callout-polaroid.scss
@@ -1,2 +1,7 @@
+/* GPLv3 license
+Callout Polaroid
+Author: ElsaTam (Kapirklaa in Discord)
+*/
+
 @use '../../../editor/callouts/callout-polaroid';
 @use '../../../shared/fonts/walter_turncoat';
