--- a/scss/css/editor/callouts/callout-screen.scss
+++ b/scss/css/editor/callouts/callout-screen.scss
@@ -1,2 +1,7 @@
+/* GPLv3 license
+Callout Screen
+Author: ElsaTam (Kapirklaa in Discord)
+*/
+
 @use '../../../editor/callouts/callout-screen';
 @use '../../../shared/fonts/profont';
