--- a/scss/css/editor/callouts/callout-timeline.scss
+++ b/scss/css/editor/callouts/callout-timeline.scss
@@ -1,2 +1,7 @@
+/* GPLv3 license
+Callout Timeline
+Author: ElsaTam (Kapirklaa in Discord)
+*/
+
 @use '../../../editor/callouts/callout-timeline';
 @use '../../../shared/fonts/playfair-display';
