--- a/scss/css/editor/callouts/callouts-metadata.scss
+++ b/scss/css/editor/callouts/callouts-metadata.scss
@@ -1,1 +1,6 @@
+/* GPLv3 license
+Callouts Metadata
+Author: ElsaTam (Kapirklaa in Discord)
+*/
+
 @use '../../../editor/callouts/callouts-metadata';
