--- a/css/editor/callouts/callout-style.css
+++ b/css/editor/callouts/callout-style.css
@@ -1,3 +1,7 @@
+/* GPLv3 license
+Callout styling
+Author: ElsaTam (Kapirklaa in Discord)
+*/
 body {
   --callout-quote: var(--color-gray-rgb);
   --callout-radius: 0;
