--- a/postcss/editor/callouts/callout-autopsy.css
+++ b/postcss/editor/callouts/callout-autopsy.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+/* GPLv3 license
+Callout Autopsy
+Author: ElsaTam (Kapirklaa in Discord)
+*/
 /* Compatibility with ITS theme/snippets */
 .markdown-source-view > div, .markdown-preview-view {
   container: markdown-view/inline-size;
