--- a/postcss/editor/callouts/callout-blank.css
+++ b/postcss/editor/callouts/callout-blank.css
@@ -1,3 +1,7 @@
+/* GPLv3 license
+Callout Blank
+Author: ElsaTam (Kapirklaa in Discord)
+*/
 .callout[data-callout=blank] {
   margin: 0;
   padding: 0;
