--- a/postcss/editor/callouts/callout-fas-infobox.css
+++ b/postcss/editor/callouts/callout-fas-infobox.css
@@ -1,3 +1,7 @@
+/* GPLv3 license
+Callout Fas Infobox
+Author: ElsaTam (Kapirklaa in Discord)
+*/
 /*
     Inspired by ITS theme's infobox callouts from SlRvb (https://publish.obsidian.md/slrvb-docs/ITS+Theme/Callouts/Callout+-+Infoboxes)
 */
