--- a/postcss/editor/callouts/callout-polaroid.css
+++ b/postcss/editor/callouts/callout-polaroid.css
@@ -1,3 +1,7 @@
+/* GPLv3 license
+Callout Polaroid
+Author: ElsaTam (Kapirklaa in Discord)
+*/
 .theme-light {
   --shadow-color: rgba(0, 0, 0, 0.2);
 }
