--- a/postcss/editor/code/code-poem.css
+++ b/postcss/editor/code/code-poem.css
@@ -1,3 +1,7 @@
+/* GPLv3 license
+Code Poem
+Author: ElsaTam (Kapirklaa in Discord)
+*/
 body {
   --workleaves-background: var(--background-primary);
   --workleaves-foreground: var(--text-normal);
