--- a/scss/css/editor/callouts/callout-cards-deck.scss
+++ b/scss/css/editor/callouts/callout-cards-deck.scss
@@ -1,1 +1,6 @@
+/* GPLv3 license
+Callout Cards deck
+Author: ElsaTam (Kapirklaa in Discord)
+*/
+
 @use '../../../editor/callouts/callout-cards-deck';
